--- a/index2.html
+++ b/index2.html
@@ -15,7 +15,7 @@
 		<link href="plugins/xcharts/xcharts.min.css" rel="stylesheet">
 		<link href="plugins/select2/select2.css" rel="stylesheet">
 		<link href="plugins/justified-gallery/justifiedGallery.css" rel="stylesheet">
-		<link href="css/style_v1.css" rel="stylesheet">
+		<link href="css/style_v2.css" rel="stylesheet">
 		<link href="plugins/chartist/chartist.min.css" rel="stylesheet">
 		<!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
 		<!--[if lt IE 9]>
@@ -51,7 +51,7 @@
 	<div class="container-fluid expanded-panel">
 		<div class="row">
 			<div id="logo" class="col-xs-12 col-sm-2">
-				<a href="index_v1.html">DevOOPS v2</a>
+				<a href="index.html">DevOOPS v2</a>
 			</div>
 			<div id="top-panel" class="col-xs-12 col-sm-10">
 				<div class="row">
@@ -63,10 +63,9 @@
 					</div>
 					<div class="col-xs-4 col-sm-8 top-panel-right">
 						<a href="#" class="about">about</a>
-						<a href="index.html" class="style2"></a>
+						<a href="index_v1.html" class="style1"></a>
 						<ul class="nav navbar-nav pull-right panel-menu">
-							
-							<!--<li class="hidden-xs">
+							<li class="hidden-xs">
 								<a href="index.html" class="modal-link">
 									<i class="fa fa-bell"></i>
 									<span class="badge">7</span>
@@ -84,7 +83,6 @@
 									<span class="badge">7</span>
 								</a>
 							</li>
-							-->
 							<li class="dropdown">
 								<a href="#" class="dropdown-toggle account" data-toggle="dropdown">
 									<div class="avatar">
@@ -154,7 +152,6 @@
 						<span class="hidden-xs">Dashboard</span>
 					</a>
 				</li>
-				<!--
 				<li class="dropdown">
 					<a href="#" class="dropdown-toggle">
 						<i class="fa fa-bar-chart-o"></i>
@@ -170,78 +167,6 @@
 						<li><a class="ajax-link" href="ajax/charts_coindesk.html">CoinDesk realtime</a></li>
 					</ul>
 				</li>
--->
-				<li class="dropdown">
-					<a href="#" class="dropdown-toggle">
-						<i class="fa fa-bar-chart-o"></i>
-						<span class="hidden-xs">Base de Datos Clientes</span>
-					</a>
-					<ul class="dropdown-menu">
-						<li><a class="ajax-link" href="page/Crear1_1.html">Crear</a></li>
-						<li><a class="ajax-link" href="page/Editar1_1.html">Editar</a></li>
-
-					</ul>
-				</li>
-
-				<li class="dropdown">
-					<a href="#" class="dropdown-toggle">
-						<i class="fa fa-bar-chart-o"></i>
-						<span class="hidden-xs">Solicitud de propuestas económicas</span>
-					</a>
-					<ul class="dropdown-menu">
-						<li><a class="ajax-link" href="page/Crear2_2.html">Crear</a></li>
-						<li><a class="ajax-link" href="page/Editar2_2.html">Editar</a></li>
-
-
-					</ul>
-				</li>
-
-				<li class="dropdown">
-					<a href="#" class="dropdown-toggle">
-						<i class="fa fa-bar-chart-o"></i>
-						<span class="hidden-xs">seccion 3</span>
-					</a>
-					<ul class="dropdown-menu">
-						<li><a class="ajax-link" href="page/seccion1.html">seccion1</a></li>
-						<li><a class="ajax-link" href="page/seccion2.html">seccion2</a></li>
-						<li><a class="ajax-link" href="page/seccion3.html">seccion3</a></li>
-						<li><a class="ajax-link" href="page/seccion4.html">seccion4</a></li>
-						<li><a class="ajax-link" href="page/seccion5.html">seccion5</a></li>
-
-					</ul>
-				</li>
-
-				<li class="dropdown">
-					<a href="#" class="dropdown-toggle">
-						<i class="fa fa-bar-chart-o"></i>
-						<span class="hidden-xs">seccion 4</span>
-					</a>
-					<ul class="dropdown-menu">
-						<li><a class="ajax-link" href="page/seccion1.html">seccion1</a></li>
-						<li><a class="ajax-link" href="page/seccion2.html">seccion2</a></li>
-						<li><a class="ajax-link" href="page/seccion3.html">seccion3</a></li>
-						<li><a class="ajax-link" href="page/seccion4.html">seccion4</a></li>
-						<li><a class="ajax-link" href="page/seccion5.html">seccion5</a></li>
-
-					</ul>
-				</li>
-
-				<li class="dropdown">
-					<a href="#" class="dropdown-toggle">
-						<i class="fa fa-bar-chart-o"></i>
-						<span class="hidden-xs">seccion 5</span>
-					</a>
-					<ul class="dropdown-menu">
-						<li><a class="ajax-link" href="page/seccion1.html">seccion1</a></li>
-						<li><a class="ajax-link" href="page/seccion2.html">seccion2</a></li>
-						<li><a class="ajax-link" href="page/seccion3.html">seccion3</a></li>
-						<li><a class="ajax-link" href="page/seccion4.html">seccion4</a></li>
-						<li><a class="ajax-link" href="page/seccion5.html">seccion5</a></li>
-
-					</ul>
-				</li>
-
-<!--
 				<li class="dropdown">
 					<a href="#" class="dropdown-toggle">
 						<i class="fa fa-table"></i>
@@ -283,8 +208,8 @@
 						 <span class="hidden-xs">Pages</span>
 					</a>
 					<ul class="dropdown-menu">
-						<li><a href="ajax/page_login_v1.html">Login</a></li>
-						<li><a href="ajax/page_register_v1.html">Register</a></li>
+						<li><a href="ajax/page_login.html">Login</a></li>
+						<li><a href="ajax/page_register.html">Register</a></li>
 						<li><a id="locked-screen" class="submenu" href="ajax/page_locked.html">Locked Screen</a></li>
 						<li><a class="ajax-link" href="ajax/page_contacts.html">Contacts</a></li>
 						<li><a class="ajax-link" href="ajax/page_feed.html">Feed</a></li>
@@ -294,7 +219,7 @@
 						<li><a class="ajax-link" href="ajax/page_invoice.html">Invoice</a></li>
 						<li><a class="ajax-link" href="ajax/page_search.html">Search Results</a></li>
 						<li><a class="ajax-link" href="ajax/page_404.html">Error 404</a></li>
-						<li><a href="ajax/page_500_v1.html">Error 500</a></li>
+						<li><a href="ajax/page_500.html">Error 500</a></li>
 					</ul>
 				</li>
 				<li class="dropdown">
@@ -391,10 +316,8 @@
 						</li>
 					</ul>
 				</li>
-				-->
 			</ul>
 		</div>
-
 		<!--Start Content-->
 		<div id="content" class="col-xs-12 col-sm-10">
 			<div id="about">
