--- a/index_v1.html
+++ b/index_v1.html
@@ -65,7 +65,8 @@
 						<a href="#" class="about">about</a>
 						<a href="index.html" class="style2"></a>
 						<ul class="nav navbar-nav pull-right panel-menu">
-							<li class="hidden-xs">
+							
+							<!--<li class="hidden-xs">
 								<a href="index.html" class="modal-link">
 									<i class="fa fa-bell"></i>
 									<span class="badge">7</span>
@@ -83,6 +84,7 @@
 									<span class="badge">7</span>
 								</a>
 							</li>
+							-->
 							<li class="dropdown">
 								<a href="#" class="dropdown-toggle account" data-toggle="dropdown">
 									<div class="avatar">
@@ -152,6 +154,7 @@
 						<span class="hidden-xs">Dashboard</span>
 					</a>
 				</li>
+				<!--
 				<li class="dropdown">
 					<a href="#" class="dropdown-toggle">
 						<i class="fa fa-bar-chart-o"></i>
@@ -167,6 +170,78 @@
 						<li><a class="ajax-link" href="ajax/charts_coindesk.html">CoinDesk realtime</a></li>
 					</ul>
 				</li>
+-->
+				<li class="dropdown">
+					<a href="#" class="dropdown-toggle">
+						<i class="fa fa-bar-chart-o"></i>
+						<span class="hidden-xs">Base de Datos Clientes</span>
+					</a>
+					<ul class="dropdown-menu">
+						<li><a class="ajax-link" href="page/Crear1_1.html">Crear</a></li>
+						<li><a class="ajax-link" href="page/Editar1_1.html">Editar</a></li>
+
+					</ul>
+				</li>
+
+				<li class="dropdown">
+					<a href="#" class="dropdown-toggle">
+						<i class="fa fa-bar-chart-o"></i>
+						<span class="hidden-xs">Solicitud de propuestas económicas</span>
+					</a>
+					<ul class="dropdown-menu">
+						<li><a class="ajax-link" href="page/Crear2_2.html">Crear</a></li>
+						<li><a class="ajax-link" href="page/Editar2_2.html">Editar</a></li>
+
+
+					</ul>
+				</li>
+
+				<li class="dropdown">
+					<a href="#" class="dropdown-toggle">
+						<i class="fa fa-bar-chart-o"></i>
+						<span class="hidden-xs">seccion 3</span>
+					</a>
+					<ul class="dropdown-menu">
+						<li><a class="ajax-link" href="page/seccion1.html">seccion1</a></li>
+						<li><a class="ajax-link" href="page/seccion2.html">seccion2</a></li>
+						<li><a class="ajax-link" href="page/seccion3.html">seccion3</a></li>
+						<li><a class="ajax-link" href="page/seccion4.html">seccion4</a></li>
+						<li><a class="ajax-link" href="page/seccion5.html">seccion5</a></li>
+
+					</ul>
+				</li>
+
+				<li class="dropdown">
+					<a href="#" class="dropdown-toggle">
+						<i class="fa fa-bar-chart-o"></i>
+						<span class="hidden-xs">seccion 4</span>
+					</a>
+					<ul class="dropdown-menu">
+						<li><a class="ajax-link" href="page/seccion1.html">seccion1</a></li>
+						<li><a class="ajax-link" href="page/seccion2.html">seccion2</a></li>
+						<li><a class="ajax-link" href="page/seccion3.html">seccion3</a></li>
+						<li><a class="ajax-link" href="page/seccion4.html">seccion4</a></li>
+						<li><a class="ajax-link" href="page/seccion5.html">seccion5</a></li>
+
+					</ul>
+				</li>
+
+				<li class="dropdown">
+					<a href="#" class="dropdown-toggle">
+						<i class="fa fa-bar-chart-o"></i>
+						<span class="hidden-xs">seccion 5</span>
+					</a>
+					<ul class="dropdown-menu">
+						<li><a class="ajax-link" href="page/seccion1.html">seccion1</a></li>
+						<li><a class="ajax-link" href="page/seccion2.html">seccion2</a></li>
+						<li><a class="ajax-link" href="page/seccion3.html">seccion3</a></li>
+						<li><a class="ajax-link" href="page/seccion4.html">seccion4</a></li>
+						<li><a class="ajax-link" href="page/seccion5.html">seccion5</a></li>
+
+					</ul>
+				</li>
+
+<!--
 				<li class="dropdown">
 					<a href="#" class="dropdown-toggle">
 						<i class="fa fa-table"></i>
@@ -316,8 +391,10 @@
 						</li>
 					</ul>
 				</li>
+				-->
 			</ul>
 		</div>
+
 		<!--Start Content-->
 		<div id="content" class="col-xs-12 col-sm-10">
 			<div id="about">
