--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
 	<head>
 		<meta charset="utf-8">
-		<title>DevOOPS v2</title>
+		<title>Sistema Reysap</title>
 		<meta name="description" content="description">
-		<meta name="author" content="DevOOPS">
+		<meta name="author" content="Bywolf">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<link href="plugins/bootstrap/bootstrap.css" rel="stylesheet">
 		<link href="plugins/jquery-ui/jquery-ui.min.css" rel="stylesheet">
@@ -51,13 +51,13 @@
 	<div class="container-fluid expanded-panel">
 		<div class="row">
 			<div id="logo" class="col-xs-12 col-sm-2">
-				<a href="index_v1.html">DevOOPS v2</a>
+				<a href="index.html">Sistema Reysap</a>
 			</div>
 			<div id="top-panel" class="col-xs-12 col-sm-10">
 				<div class="row">
 					<div class="col-xs-8 col-sm-4">
 						<div id="search">
-							<input type="text" placeholder="search"/>
+							<input type="text" placeholder="Busqueda"/>
 							<i class="fa fa-search"></i>
 						</div>
 					</div>
@@ -92,7 +92,7 @@
 									</div>
 									<i class="fa fa-angle-down pull-right"></i>
 									<div class="user-mini pull-right">
-										<span class="welcome">Welcome,</span>
+										<span class="welcome">Bienvenid@,</span>
 										<span>Jane Devoops</span>
 									</div>
 								</a>
@@ -100,13 +100,13 @@
 									<li>
 										<a href="#">
 											<i class="fa fa-user"></i>
-											<span>Profile</span>
+											<span>Perfil</span>
 										</a>
 									</li>
 									<li>
 										<a href="ajax/page_messages.html" class="ajax-link">
 											<i class="fa fa-envelope"></i>
-											<span>Messages</span>
+											<span>Mensajes</span>
 										</a>
 									</li>
 									<li>
@@ -118,13 +118,13 @@
 									<li>
 										<a href="ajax/calendar.html" class="ajax-link">
 											<i class="fa fa-tasks"></i>
-											<span>Tasks</span>
+											<span>Calendario</span>
 										</a>
 									</li>
 									<li>
 										<a href="#">
 											<i class="fa fa-cog"></i>
-											<span>Settings</span>
+											<span>Ajustes</span>
 										</a>
 									</li>
 									<li>
@@ -149,7 +149,7 @@
 		<div id="sidebar-left" class="col-xs-2 col-sm-2">
 			<ul class="nav main-menu">
 				<li>
-					<a href="ajax/dashboard.html" class="ajax-link">
+					<a href="Page/home.html" class="ajax-link">
 						<i class="fa fa-dashboard"></i>
 						<span class="hidden-xs">Dashboard</span>
 					</a>
@@ -199,7 +199,7 @@
 				<li class="dropdown">
 					<a href="#" class="dropdown-toggle">
 						<i class="fa fa-bar-chart-o"></i>
-						<span class="hidden-xs">seccion 3</span>
+						<span class="hidden-xs">Levantamientos Programados</span>
 					</a>
 					<ul class="dropdown-menu">
 						<li><a class="ajax-link" href="page/seccion1.html">seccion1</a></li>
@@ -214,7 +214,7 @@
 				<li class="dropdown">
 					<a href="#" class="dropdown-toggle">
 						<i class="fa fa-bar-chart-o"></i>
-						<span class="hidden-xs">seccion 4</span>
+						<span class="hidden-xs">Reporte Propuestas Económicas Enviadas</span>
 					</a>
 					<ul class="dropdown-menu">
 						<li><a class="ajax-link" href="page/seccion1.html">seccion1</a></li>
@@ -229,7 +229,67 @@
 				<li class="dropdown">
 					<a href="#" class="dropdown-toggle">
 						<i class="fa fa-bar-chart-o"></i>
-						<span class="hidden-xs">seccion 5</span>
+						<span class="hidden-xs">Ordenes de Trabajo</span>
+					</a>
+					<ul class="dropdown-menu">
+						<li><a class="ajax-link" href="page/seccion1.html">seccion1</a></li>
+						<li><a class="ajax-link" href="page/seccion2.html">seccion2</a></li>
+						<li><a class="ajax-link" href="page/seccion3.html">seccion3</a></li>
+						<li><a class="ajax-link" href="page/seccion4.html">seccion4</a></li>
+						<li><a class="ajax-link" href="page/seccion5.html">seccion5</a></li>
+
+					</ul>
+				</li>
+
+				<li class="dropdown">
+					<a href="#" class="dropdown-toggle">
+						<i class="fa fa-bar-chart-o"></i>
+						<span class="hidden-xs">Reporte de Ordenes de Trabajo Generales</span>
+					</a>
+					<ul class="dropdown-menu">
+						<li><a class="ajax-link" href="page/seccion1.html">seccion1</a></li>
+						<li><a class="ajax-link" href="page/seccion2.html">seccion2</a></li>
+						<li><a class="ajax-link" href="page/seccion3.html">seccion3</a></li>
+						<li><a class="ajax-link" href="page/seccion4.html">seccion4</a></li>
+						<li><a class="ajax-link" href="page/seccion5.html">seccion5</a></li>
+
+					</ul>
+				</li>
+
+				<li class="dropdown">
+					<a href="#" class="dropdown-toggle">
+						<i class="fa fa-bar-chart-o"></i>
+						<span class="hidden-xs">Indicador Ventas VS Objetivo</span>
+					</a>
+					<ul class="dropdown-menu">
+						<li><a class="ajax-link" href="page/seccion1.html">seccion1</a></li>
+						<li><a class="ajax-link" href="page/seccion2.html">seccion2</a></li>
+						<li><a class="ajax-link" href="page/seccion3.html">seccion3</a></li>
+						<li><a class="ajax-link" href="page/seccion4.html">seccion4</a></li>
+						<li><a class="ajax-link" href="page/seccion5.html">seccion5</a></li>
+
+					</ul>
+				</li>
+
+				<li class="dropdown">
+					<a href="#" class="dropdown-toggle">
+						<i class="fa fa-bar-chart-o"></i>
+						<span class="hidden-xs">Ordenes de Facturación</span>
+					</a>
+					<ul class="dropdown-menu">
+						<li><a class="ajax-link" href="page/seccion1.html">seccion1</a></li>
+						<li><a class="ajax-link" href="page/seccion2.html">seccion2</a></li>
+						<li><a class="ajax-link" href="page/seccion3.html">seccion3</a></li>
+						<li><a class="ajax-link" href="page/seccion4.html">seccion4</a></li>
+						<li><a class="ajax-link" href="page/seccion5.html">seccion5</a></li>
+
+					</ul>
+				</li>
+
+				<li class="dropdown">
+					<a href="#" class="dropdown-toggle">
+						<i class="fa fa-bar-chart-o"></i>
+						<span class="hidden-xs">Requisiciones de Materiales</span>
 					</a>
 					<ul class="dropdown-menu">
 						<li><a class="ajax-link" href="page/seccion1.html">seccion1</a></li>
@@ -400,11 +460,10 @@
 			<div id="about">
 				<div class="about-inner">
 					<h4 class="page-header">Open-source admin theme for you</h4>
-					<p>DevOOPS team</p>
-					<p>Homepage - <a href="http://devoops.me" target="_blank">http://devoops.me</a></p>
-					<p>Email - <a href="mailto:devoopsme@gmail.com">devoopsme@gmail.com</a></p>
-					<p>Twitter - <a href="http://twitter.com/devoopsme" target="_blank">http://twitter.com/devoopsme</a></p>
-					<p>Donate - BTC 123Ci1ZFK5V7gyLsyVU36yPNWSB5TDqKn3</p>
+					<p>ByWolf</p>
+					<p>Homepage - <a href="http://bywolf.mx" target="_blank">http://bywolf.mx</a></p>
+					<p>Email - <a href="mailto:ds@bywolf.mx">ds@bywolf.mx</a></p>
+
 				</div>
 			</div>
 			<div class="preloader">
